# Tiran

./: .gitignore  CMakeLists.txt  README.md
include/: CameraController.h  Dispatcher.h  Entity.h  InputManager.h  KeyboardInput.h  KeyboardListener.h  MouseButtonInput.h  MouseButtonListener.h  MousePositionInput.h  MousePositionListener.h  Renderable.h  Singleton.h  Time.h
resources/: fragment.frag  vertex.vert
src/: demoShaderLoader.cpp  main.cpp
src/Rendering/: Renderable.cpp
src/controllers/: CameraController.cpp
src/entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/game/: Player.cpp  Player.h  game.cpp  game.h
src/input/: InputManager.cpp  InputManager.h  KeyboardInput.h  MouseButtonInput.cpp  MouseButtonInput.h  MousePositionInput.cpp  MousePositionInput.h
src/project/: Game.cpp  Game.h
src/rendering/: Renderable.cpp  Renderable.h
src/tools/: Dispatcher.cpp  Dispatcher.h  Observer.h  demoShaderLoader.cpp
src/utils/: Time.cpp  openglDebug.cpp
